@@ -65,6 +65,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/CaptureERB.html">capture_erb</a>: Allows capturing the output of ERB template blocks, instead of injecting them into the template output.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Chunked.html">chunked</a>: Adds support for streaming template responses using Transfer-Encoding: chunked.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ContentFor.html">content_for</a>: Allows storage of content in one template and retrieval of that content in a different template.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/ErbH.html">erb_h</a>: Adds faster (if slightly less safe method) h method for html escaping, based on erb/escape.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ExceptionPage.html">exception_page</a>: Shows page with debugging information for exceptions, designed for use in error handler in development mode.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/H.html">h</a>: Adds h method for html escaping.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/HashBranchViewSubdir.html">hash_branch_view_subdir</a>: Automatically appends a view subdirectory for each successful hash branch taken.</li>
